--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </head>
   <body class="page">
     <header class="header">
-      <h1 class="header__title">&lt;/html&gt;</h1>
-      <h2 class="header__subtitle">закрывающий тег</h2>
+      <a class="header__logo">&lt;/html&gt;</a>
+      <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -48,15 +48,15 @@
     </header>
     <main class="content">
       <article class="article">
-        <h3 class="article__title">
+        <h2 class="article__title">
           Фритрек и нулевой спринт: Подготовка к работе
-        </h3>
+        </h2>
         <div class="article__card">
-          <span class="card__label">&lt;HTML&gt;</span>
+          <span class="card__label">&lt;/HTML&gt;</span>
           <img
-            class="card__image woman"
-            src="./images/image-1.jpg"
-            alt="пожилая женщина открыла ноутбук как книгу"
+            class="card__image filter-contrast"
+            src="./images/image.png"
+            alt="фургончик в стиле пиксель-арт"
             loading="lazy"
           />
         </div>
@@ -69,7 +69,7 @@
           <p>Как говорится, в жизни нужно попробовать все.</p>
         </div>
         <div class="button-like-container">
-          <button class="button card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -102,19 +102,19 @@
               </g>
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
       <article class="article">
-        <h3 class="article__title">1 спринт: Я — чистый лист</h3>
+        <h2 class="article__title">1 спринт: Я — чистый лист</h2>
         <div class="article__card">
           <span class="card__label">&lt;/head&gt;</span>
           <img
-            class="card__image"
-            src="./images/image-2.jpg"
-            alt="небо, солнце и облака в стиле пиксель-арт"
+            class="card__image filter-invert"
+            src="./images/image.png"
+            alt="фургончик в стиле пиксель-арт"
             loading="lazy"
           />
         </div>
@@ -129,7 +129,7 @@
           <p>Попытки преодоления синдрома самозванца.</p>
         </div>
         <div class="button-like-container">
-          <button class="button card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -162,19 +162,19 @@
               </g>
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
       <article class="article">
-        <h3 class="article__title">1 спринт: А если не получится?</h3>
+        <h2 class="article__title">1 спринт: А если не получится?</h2>
         <div class="article__card">
           <span class="card__label">&lt;CSS&gt;</span>
           <img
-            class="card__image glasses"
-            src="./images/image-3.jpg"
-            alt="солнечные очки в стиле пиксель-арт"
+            class="card__image filter-saturate-hue-rotate"
+            src="./images/image.png"
+            alt="фургончик в стиле пиксель-арт"
             loading="lazy"
           />
         </div>
@@ -187,7 +187,7 @@
           <p>Я сделяль! Большой шаг для меня лично.</p>
         </div>
         <div class="button-like-container">
-          <button class="button card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -220,18 +220,18 @@
               </g>
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
       <article class="article">
-        <h3 class="article__title">2 спринт: Погоня за идеалом</h3>
+        <h2 class="article__title">2 спринт: Погоня за идеалом</h2>
         <div class="article__card">
           <span class="card__label">&lt;li&gt;</span>
           <img
-            class="card__image car"
-            src="./images/image-4.png"
+            class="card__image filter-sepia"
+            src="./images/image.png"
             alt="фургончик в стиле пиксель-арт"
             loading="lazy"
           />
@@ -247,7 +247,7 @@
           <p>Идеал - хорошо, но глупо ставить идеал во главу угла.</p>
         </div>
         <div class="button-like-container">
-          <button class="button card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -280,19 +280,19 @@
               </g>
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
       <article class="article">
-        <h3 class="article__title">2 спринт: О тех, кто рядом</h3>
+        <h2 class="article__title">2 спринт: О тех, кто рядом</h2>
         <div class="article__card">
           <span class="card__label">&lt;dialog&gt;</span>
           <img
-            class="card__image phone"
-            src="./images/image-5.jpg"
-            alt="переписка в смартфоне"
+            class="card__image filter-multibright"
+            src="./images/image.png"
+            alt="фургончик в стиле пиксель-арт"
             loading="lazy"
           />
         </div>
@@ -308,7 +308,7 @@
           <p>Я невероятно благодарна мужу за то, что он всегда рядом.</p>
         </div>
         <div class="button-like-container">
-          <button class="button card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -341,19 +341,19 @@
               </g>
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
       <article class="article">
-        <h3 class="article__title">3 спринт: Обходные стратегии</h3>
+        <h2 class="article__title">3 спринт: Обходные стратегии</h2>
         <div class="article__card">
           <span class="card__label">&lt;nav&gt;</span>
           <img
-            class="card__image cat"
-            src="./images/image-6.gif"
-            alt="котик пытается снять с шеи игрушечный тостовый хлеб"
+            class="card__image"
+            src="./images/image.png"
+            alt="фургончик в стиле пиксель-арт"
             loading="lazy"
           />
         </div>
@@ -363,10 +363,10 @@
             вам могло показаться, что решения просто иссякли. Значит, пришло
             время посмотреть на задачу под другим углом.
           </p>
-          <p>Иногда нужно просто поспать.</p>
+          <p>Иногда нужно взять и просто поспать.</p>
         </div>
         <div class="button-like-container">
-          <button class="button card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -399,19 +399,19 @@
               </g>
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
       <article class="article">
-        <h3 class="article__title">3 спринт: Когда опускаются руки</h3>
+        <h2 class="article__title">3 спринт: Когда опускаются руки</h2>
         <div class="article__card">
           <span class="card__label">&lt;life = undefined&gt;</span>
           <img
-            class="card__image nerves"
-            src="./images/image-7.jpg"
-            alt="человек шагает в бассейн с надписью нервный срыв"
+            class="card__image filter-multiblur"
+            src="./images/image.png"
+            alt="фургончик в стиле пиксель-арт"
             loading="lazy"
           />
         </div>
@@ -426,7 +426,7 @@
           <p>Нужно идти к зеленой галочке! Попытка - не пытка.</p>
         </div>
         <div class="button-like-container">
-          <button class="button card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -459,19 +459,19 @@
               </g>
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
       <article class="article">
-        <h3 class="article__title">«Сейчас я здесь»</h3>
+        <h2 class="article__title">«Сейчас я здесь»</h2>
         <div class="article__card">
           <span class="card__label">&lt;it's okay&gt;</span>
           <img
-            class="card__image woods"
-            src="./images/image-8.jpg"
-            alt="дорога в лесу"
+            class="card__image filter-multiopacity"
+            src="./images/image.png"
+            alt="фургончик в стиле пиксель-арт"
             loading="lazy"
           />
         </div>
@@ -485,11 +485,11 @@
             и есть результат.
           </p>
           <p>
-            Самое главное, что я вынесла из этих спринтов - мне уже не страшно.
+            Самое главное, что я вынесла из этих спринтов - мне уже не страшно. Я справлюсь.
           </p>
         </div>
         <div class="button-like-container">
-          <button class="button card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -522,15 +522,14 @@
               </g>
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
-    </main>
-    <footer>
       <button
         class="button save-button"
+        type="button"
         onclick="window['dialog-id'].showModal()"
         aria-controls="dialog-id"
       >
@@ -541,14 +540,14 @@
         >
           <use href="./svg/save-icon.svg#save-icon" />
         </svg>
-        <span class="button__text">Сохранить на память</span>
+        <span class="button__text">Сохранить на&nbsp;память</span>
       </button>
 
       <dialog class="modal-window" id="dialog-id">
         <div class="modal__container">
           <div class="modal__text-container">
             <svg
-              class="save-icon"
+              class="modal__save-icon"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 39 39"
             >
@@ -560,7 +559,7 @@
             <button
               class="button ok-button"
               onclick="window['dialog-id'].close()"
-              type="submit"
+              type="button"
               aria-controls="dialog-id"
             >
               <span class="button__text">Ok</span>
@@ -568,7 +567,7 @@
           </form>
         </div>
       </dialog>
-    </footer>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
