--- a/index.html
+++ b/index.html
@@ -485,7 +485,8 @@
             и есть результат.
           </p>
           <p>
-            Самое главное, что я вынесла из этих спринтов - мне уже не страшно. Я справлюсь.
+            Самое главное, что я вынесла из этих спринтов - мне уже не страшно.
+            Я справлюсь.
           </p>
         </div>
         <div class="button-like-container">
